--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=kapDuty
-server.port=8008
+server.port=8111
 
+spring.redis.host=localhost
+spring.redis.port=6379
+
+server.logname=kap-duty.log
 
 #Main DB DataSource
 spring.main.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
