--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,13 @@ spring.redis.port=6379
 
 server.logname=kap-duty.log
 
+#Kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=kap-duty-consumer
+spring.kafka.security.protocol=PLAINTEXT
+spring.kafka.sasl-mechanism=PLAIN
+spring.kafka.jaas-config=
+
 #Main DB DataSource
 spring.main.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.main.datasource.url=jdbc:mysql://localhost:3306/adjetter
