open duty service added and mail util

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.main.datasource.username=root
 spring.main.datasource.password=aashi
 spring.main.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.main.hibernate.ddl-auto=none
+
+openduty.webhook.url=http://your-openduty-server/api/v1/incident
+
